# document_qa

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
document_qa/: main.py  pyproject.toml  settings.toml
document_qa/database/: crud.py  database.py  models.py  schemas.py
document_qa/document_qa/: main.py
document_qa/document_qa/text_extracter/: pdf_miners.py
document_qa/document_qa/vector_search/: text_cleaning.py
document_qa/routers/models/: requests.py  response.py
document_qa/routers/v1/: dependencies.py  files.py  search.py
document_qa/text_extracter/: aws_textract.py  pdf_miners.py
document_qa/vector_search/: milvus_client.py  text_embedders.py  text_splitter.py  vector_db.py
