[tool.poetry]
name = "document-qa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
boto3 = "^1.34.23"
httpx = "^0.26.0"
pymupdf = "^1.23.16"
transformers = "^4.36.2"
langchain = "^0.1.1"
textacy = "^0.13.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
chromadb = "^0.4.22"
sentence-transformers = "2.2.2"
instructorembedding = "^1.0.1"
pypdf = "^4.0.1"
langchain-experimental = "^0.0.50"
tiktoken = "^0.5.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
