[tool.poetry]
name = "document-qa"
version = "0.1.0"
description = ""
authors = ["Arun Gautham Soundarrajan <arungautham60@gmail..com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
boto3 = "^1.34.46"
httpx = "^0.27.0"
pymupdf = "^1.23.25"
transformers = "^4.38.0"
langchain = "^0.1.8"
textacy = "^0.13.0"
sentence-transformers = "2.2.2"
pypdf = "^4.0.2"
langchain-experimental = "^0.0.52"
tiktoken = "^0.6.0"
pymilvus = "^2.3.6"
python-multipart = "^0.0.9"
dynaconf = "^3.2.4"
sqlalchemy = "^2.0.27"
openai = "^1.12.0"
uvicorn = "^0.27.1"
instructorembedding = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
