[tool.poetry]
name = "document-qa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
boto3 = "^1.34.23"
httpx = "^0.26.0"
pymupdf = "^1.23.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
